apps/lab-stg/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-1
  labels:
    app: backend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-1
  template:
    metadata:
      labels:
        app: backend-1
    spec:
      containers:
        - name: nginx
          image: nginx:1.29-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-static-content-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: backend-1.index.html
      volumes:
        - name: nginx-static-content-volume
          configMap:
            name: nginx-static-content
