apps/lab-stg/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-1
spec:
  selector:
    app: backend-1
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-2
spec:
  selector:
    app: backend-2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
