apps/lab-stg/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-1
spec:
  hosts:
    - backend-1-lab-stg.chehsunliu.dev
  gateways:
    - http://istio-ingress.istio-ingress.svc.cluster.local
  http:
    - route:
        - destination:
            host: backend-1.lab-stg.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-2
spec:
  hosts:
    - backend-2-lab-stg.chehsunliu.dev
  gateways:
    - http://istio-ingress.istio-ingress.svc.cluster.local
  http:
    - route:
        - destination:
            host: backend-2.lab-stg.svc.cluster.local
            port:
              number: 80
